<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of Arkham Companion.
 
 Arkham Companion is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 Arkham Companion is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with Arkham Companion.  If not, see <http://www.gnu.org/licenses/>.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hx_time_background"
    android:padding="32dp">

    <!-- Decorative Cthulhu-themed image -->
    <ImageView
        android:id="@+id/timeImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/img_cthulhu_background"
        android:scaleType="centerInside"
        android:alpha="0.7"
        android:contentDescription="@string/hx_time_image" />

    <!-- Main text with enhanced styling -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/empty_hx"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:gravity="center"
        android:background="@drawable/text_background"
        android:padding="16dp" />

    <!-- Additional atmospheric text -->
    <TextView
        android:id="@+id/atmosphericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/hx_atmospheric_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:alpha="0.8"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2" />

</RelativeLayout>